src/pages/fr/v1.17.0/rn-sdk/init.mdx
---
title: "SDK React Native - Initialisation du SDK"
metaTitle: "SDK React Native - Initialisation du SDK"
metaDescription: "Options de configuration pour la méthode constructeur du tracker React Native pour iOS"
---
import Aside from '~/components/Aside.astro'
import ORCard from '~/components/Card/ORCard.astro'

<Aside type="caution">
	Le SDK React Native est en version Bêta et ne prend actuellement en charge que les applications iOS. N'hésitez pas à nous faire part de vos retours ou à signaler tout problème que vous pourriez rencontrer sur notre [Slack](https://slack.openreplay.com) ou consultez notre [Forum](https://forum.openreplay.com).
</Aside>

## Installation

La ligne suivante installera le tracker et avec lui le SDK afin que vous puissiez profiter de toutes les fonctionnalités du tracker.

```bash
npm i @openreplay/react-native
```

## Initialisation

Lors de l'instanciation du tracker d'OpenReplay, plusieurs options de configuration sont disponibles pour personnaliser de nombreux aspects de l'enregistrement et de l'expérience d'enregistrement. Vous devez définir l'option `projectKey` dans le constructeur. Vous pouvez obtenir cette valeur depuis votre tableau de bord OpenReplay sous 'Preferences > Projects'.

<Aside type="tip">
	Notez que si vous avez plusieurs projets, vous devez faire attention à la clé de projet que vous choisissez.
</Aside>


### Ajout du code de suivi

Ajoutez le code suivant à votre fichier racine :

```js
import Openreplay from '@openreplay/react-native';

// ...
useEffect(() => {
	OpenReplay.tracker.startSession(
		'yourProjectKey',
		options, // explained below, set {} if empty
		'https://local.openreplay.instance/ingest' // not required if you're using managed version
	);
}, [])
```

### Assainir les données

Consultez [comment assainir les données dans les rejeux React Native](/rn-sdk/sanitization) pour plus de détails.

## Options d'initialisation

Par défaut, toutes les options sont définies sur `true` :

- `crashes: Bool` Active crashlytics.
- `analytics: Bool` Active le suivi analytique des vues marquées.
- `performances: Bool` Active l'écouteur de performances.
- `logs: Bool` Active l'écouteur de journaux.
- `screen: Bool` Active l'enregistreur d'écran.

## Méthodes

<div class="grid grid-cols-12 md:grid-cols-12 gap-3 md:gap-4">
	<ORCard title="Découvrez les méthodes et modules du SDK React Native" url="/rn-sdk/modules" hideIcon={true} width="100"/>
</div>

## Des questions ?
Si vous avez des questions concernant ce processus, n'hésitez pas à nous contacter sur notre [Slack](https://slack.openreplay.com) ou à consulter notre [Forum](https://forum.openreplay.com).